--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -253,6 +253,8 @@ input[type=submit]{
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
+    vertical-align: middle;
+    line-height: 1px;
 }
 input[type=submit]:hover{
     background-color: #ad0f0f;
@@ -307,6 +309,7 @@ input[type=submit]:hover{
         padding: 15px 0px !important;
         height: 51px;
         box-sizing: border-box;
+        
     }
     .user_box label{
         font-size: 16px;
